--- a/TASK 3 RESPONSIVE INTERACTION APIs/index.html
+++ b/TASK 3 RESPONSIVE INTERACTION APIs/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Book Explorer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>📖 Book & Author Explorer</h1>
+    <input type="text" id="searchInput" placeholder="Search by genre or keyword..." />
+    <button onclick="searchBooks()">Search</button>
+
+    <h2>🌟 Featured Authors</h2>
+    <div class="carousel" id="authorCarousel"></div>
+
+    <h2>📚 Book Results</h2>
+    <div class="bookGrid" id="bookGrid"></div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
 
